--- a/src/pages/interact/tests/test1.html
+++ b/src/pages/interact/tests/test1.html
@@ -15,7 +15,7 @@
         <a href="../../archive.html">архив</a>
         <a href="../../interact.html">интерактив </a>
       </nav>
-      <h1>Тест номер один slang</h1>
+      <h1>Тест номер один слэнг</h1>
     </header>
     <main class="O_Test">
       <p class="A_NumberOfQuestion">
@@ -23,6 +23,10 @@
       </p>
       <h2 class="A_Question"></h2>
       <div class="C_Answers">
+        <div class="M_AnswerMassage">
+          <input type="checkbox">
+          <label class="A_AnswerText"></label>
+        </div>
         <div class="M_AnswerMassage">
           <input type="checkbox">
           <label class="A_AnswerText"></label>
